--- a/src/main/resources/static/css/userStyles.css
+++ b/src/main/resources/static/css/userStyles.css
@@ -283,8 +283,8 @@ a {
     height: 3.125rem; /* 50px -> 3.125rem */
     padding-bottom: 0.625rem; /* 10px -> 0.625rem */
     padding-left: 0.3125rem; /* 5px -> 0.3125rem */
-
-    /*border-bottom: 0.0625rem solid;*/
+    margin-bottom: 10px;
+    border-bottom: 0.0625rem #415da5 solid;
     /*border-bottom-style: groove;*/
 }
 
@@ -319,15 +319,13 @@ a {
 }
 
 .info_box_container {
-    height: 50%;
+    /*height: 50%;*/
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    margin-top: 10px    ;
-}
-
-.info_box {
-    margin-bottom: 5px;
+    margin-top: 10px;
+    padding-left: 10px;
+    padding-right: 15px;
 }
 
 .info_box > div > span {
@@ -486,4 +484,8 @@ a {
 #second {
     display: none;
     flex-direction: column;
+}
+
+.text-display {
+    margin-top: 5px;
 }
