--- a/src/main/resources/static/css/indexStyles.css
+++ b/src/main/resources/static/css/indexStyles.css
@@ -267,3 +267,7 @@ p {
     background-color: #f72044;
     color : white;
 }
+
+#agreeButton:hover, #disagreeButton:hover{
+    border: 3px solid black;
+}
