--- a/src/main/resources/templates/user/delOrUpdate.html
+++ b/src/main/resources/templates/user/delOrUpdate.html
@@ -98,10 +98,10 @@
             </p>
             <p class="extra_top_margin">회원탈퇴를 계속 진행하시겠습니까?</p>
         </div>
-        <div class="extra_top_margin input_box">
+        <div class="extra_top_margin input_box" style="justify-content: space-between !important;">
             <input type="hidden" name="findIdSource" id="findIdSource">
-            <button type="button" class="two_button" id="disagreeButton">취소</button>
-            <button type="button" class="two_button" id="agreeButton">회원탈퇴</button>
+            <button type="button" class="two_button" style="width: 50%" id="disagreeButton">취소</button>
+            <button type="button" class="two_button" style="width: 50%" id="agreeButton">회원탈퇴</button>
         </div>
     </div>
 </div>
