--- a/src/main/resources/templates/health/prescriptionList.html
+++ b/src/main/resources/templates/health/prescriptionList.html
@@ -10,11 +10,39 @@
     <script src="/js/setReferrer.js" defer></script>
     <script th:inline="javascript">
         const prescriptionList = /*[[${session.prescriptionList}]]*/ null;
+        const SS_USER = /*[[${session.SS_USER}]]*/ null;
+
+        $(document).ready(function (){
+            if (SS_USER == null) {
+                alert("로그인 후 이용 가능합니다.");
+                setReferrer();
+                return;
+            }
+        });
 
         console.log(prescriptionList);
     </script>
 </head>
 <body>
-
+<nav>
+    <div class="nav-content">
+        <div class="nav-group same_width justify-left">
+            <a href="/user/index">하루약속</a>
+        </div>
+        <div class="nav-group" id="serviceNav">
+            <a href="/health/auth">처방 내역 조회</a>
+            <a href="/health/auth">처방 내역 동기화</a>
+            <a href="#">AI 챗봇 상담</a>
+            <a href="#">주변 약국 찾기</a>
+        </div>
+        <div class="nav-group same_width justify-right" id="beforeLoginNav" th:if="${session.SS_USER == null}">
+            <a href="/user/signin" class="login" onclick="setReferrer()">로그인</a>
+        </div>
+        <div class="nav-group after_login same_width justify-right" id="afterLoginNav" th:if="${session.SS_USER != null}">
+            <a href="/user/pwd_verification" class="nav-icon" title="마이페이지">👤</a>
+            <a href="/user/logout" class="login">로그아웃</a>
+        </div>
+    </div>
+</nav>
 </body>
 </html>
