--- a/src/main/resources/templates/health/result.html
+++ b/src/main/resources/templates/health/result.html
@@ -61,12 +61,11 @@
 
 <!-- 모달 창 -->
 <div id="modal1" class="modal">
-    <div class="modal-content">
+    <div class="modal-content" style="align-content: center">
         <h3>처방 내역 동기화</h3>
-        <p>처방내역을 동기화 중입니다.<br>
+        <p style="text-align: center">처방내역을 동기화 중입니다.<br>
             약 5분 정도 소요될 수 있습니다.
         </p>
-        <button onclick="closeModal('modal1')">확인</button>
     </div>
 </div>
 
