--- a/src/main/resources/templates/health/prescriptionList.html
+++ b/src/main/resources/templates/health/prescriptionList.html
@@ -18,9 +18,14 @@
                 setReferrer();
                 return;
             }
-        });
 
-        console.log(prescriptionList);
+            // prescriptionList가 비어있는지 확인
+            if (!prescriptionList || prescriptionList.length === 0) {
+                alert("처방내역DB에 데이터가 없습니다. 동기화를 진행해주세요.");
+                location.href="/health/auth";
+            }
+
+        });
     </script>
 </head>
 <body>
