--- a/src/main/resources/templates/health/prescriptionList.html
+++ b/src/main/resources/templates/health/prescriptionList.html
@@ -121,11 +121,13 @@
 <div class="auth-container">
     <div class="auth-box">
         <div style="height: 600px; width: 500px; display: flex; align-items: center; flex-direction: column; gap:20px;" id="prescription-container">
-<!--            이미지 추가 예정-->
+            <!-- 이미지 -->
             <div style="width:200px;height: 200px">
                 <img src="/icons/medicine.png" style="width: 100%; height: 100%; object-fit: cover">
             </div>
+            <!-- 제목 -->
             <div style="font-weight: bold; font-size: larger">처방내역</div>
+            <!-- 리스트 -->
             <div style="gap:10px; display: flex; flex-direction: column; height: 350px; width: 100%; overflow-y: scroll" id="prescription-list">
                 <div th:each="item : ${prescriptionList}" id="prescription-${item.prescriptionId}" class="status-card">
                     <div class="indicator" th:classappend="${item.remindYn} == 'Y' ? ' green' : ' grey'"></div>
